crates/oxc_astro_codegen/tests/integration/snapshots/astro/head_content_with_component_first.snap
---
source: crates/oxc_codegen/tests/integration/astro.rs
---
### Input
---
import Analytics from '../components/Analytics.astro';
---
<Analytics />
<title>{title}</title>
<meta name="description" content="a description" />

### Expected (Go compiler)
import {
  Fragment,
  render as $$render,
  createAstro as $$createAstro,
  createComponent as $$createComponent,
  renderComponent as $$renderComponent,
  renderHead as $$renderHead,
  maybeRenderHead as $$maybeRenderHead,
  unescapeHTML as $$unescapeHTML,
  renderSlot as $$renderSlot,
  mergeSlots as $$mergeSlots,
  addAttribute as $$addAttribute,
  spreadAttributes as $$spreadAttributes,
  defineStyleVars as $$defineStyleVars,
  defineScriptVars as $$defineScriptVars,
  renderTransition as $$renderTransition,
  createTransitionScope as $$createTransitionScope,
  renderScript as $$renderScript,
  createMetadata as $$createMetadata
} from "http://localhost:3000/";
import Analytics from "../components/Analytics.astro";

import * as $$module1 from "../components/Analytics.astro";

export const $$metadata = $$createMetadata(import.meta.url, { modules: [{ module: $$module1, specifier: "../components/Analytics.astro", assert: {} }], hydratedComponents: [], clientOnlyComponents: [], hydrationDirectives: new Set([]), hoisted: [] });

const $$Component = $$createComponent(($$result, $$props, $$slots) => {

return $$render`${$$renderComponent($$result,"Analytics",Analytics,{})}
<title>${title}</title>
<meta name="description" content="a description">`;
}, undefined, undefined);
export default $$Component;

### Actual (Oxc)
import {
  Fragment,
  render as $$render,
  createAstro as $$createAstro,
  createComponent as $$createComponent,
  renderComponent as $$renderComponent,
  renderHead as $$renderHead,
  maybeRenderHead as $$maybeRenderHead,
  unescapeHTML as $$unescapeHTML,
  renderSlot as $$renderSlot,
  mergeSlots as $$mergeSlots,
  addAttribute as $$addAttribute,
  spreadAttributes as $$spreadAttributes,
  defineStyleVars as $$defineStyleVars,
  defineScriptVars as $$defineScriptVars,
  renderTransition as $$renderTransition,
  createTransitionScope as $$createTransitionScope,
  renderScript as $$renderScript,
  createMetadata as $$createMetadata
} from "http://localhost:3000/";
import Analytics from "../components/Analytics.astro";

import * as $$module1 from "../components/Analytics.astro";

export const $$metadata = $$createMetadata(import.meta.url, { modules: [{ module: $$module1, specifier: "../components/Analytics.astro", assert: {} }], hydratedComponents: [], clientOnlyComponents: [], hydrationDirectives: new Set([]), hoisted: [] });

const $$Component = $$createComponent(($$result, $$props, $$slots) => {

return $$render`${$$renderComponent($$result,"Analytics",Analytics,{})}
<title>${title}</title>
<meta name="description" content="a description">`;
}, undefined, undefined);
export default $$Component;

